# ai-workflow-playground

./: .gitignore  AGENTS.md  LICENSE.md  README.md  project_plan.md  pyproject.toml  report.md  skills-lock.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: technical-task.md
example_runs/: README.md
example_runs/LangGraph/: README.md
example_runs/LangGraph/basic_planning/: README.md  project_plan.md
example_runs/LangGraph/basic_research/: README.md  report.md
example_runs/LangGraph/basic_tdd/: README.md  failing_tests_draft.py
example_runs/LangGraph/implementation_with_context/: README.md  implementation_draft.md
example_runs/LangGraph/planning_with_context/: README.md  project_plan.md
example_runs/basic_implementation/: README.md
example_runs/basic_planning/: README.md  project_plan.md
example_runs/basic_tdd/: README.md
example_runs/crewAI/: README.md
example_runs/crewAI/basic_implementation/: implementation_draft.md
example_runs/crewAI/basic_tdd/: README.md  failing_tests_draft.py
example_runs/crewAI/critic_loop_implementation/: implementation_draft.md
example_runs/crewAI/local_context_implementation/: README.md  implementation_draft.md
example_runs/critic_loop_implementation/: README.md
scripts/: run_smoke_tests.sh
src/ai_dojo/: cli.py  crew.py  main.py
src/ai_dojo/config/: agents.yaml  tasks.yaml
src/ai_dojo/flows/: implementation_flow.py  tdd_flow.py
tests/: conftest.py  test_crews_contract.py  test_flows_contract.py  test_repo_context_collector.py  test_smoke_imports.py
tmp/: test run output.md
(+21 files in other folders)
