[project]
name = "ai_dojo"
version = "0.1.0"
description = "ai-dojo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1"
]

[project.scripts]
ai_dojo = "ai_dojo.main:run"
run_crew = "ai_dojo.main:run"
train = "ai_dojo.main:train"
replay = "ai_dojo.main:replay"
test = "ai_dojo.main:test"
run_with_trigger = "ai_dojo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
