[project]
name = "ai_dojo"
version = "0.1.0"
description = "ai-dojo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1",
    "langchain>=0.3,<0.4",
    "langgraph>=0.3,<0.4",
    "pydantic>=2,<3",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
graph = "ai_dojo.cli:main"
ai_dojo = "ai_dojo.main:run"
run_crew = "ai_dojo.main:run"
train = "ai_dojo.main:train"
replay = "ai_dojo.main:replay"
test = "ai_dojo.main:test"
run_with_trigger = "ai_dojo.main:run_with_trigger"
run_planning = "ai_dojo.main:run_planning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_dojo"]
